fix(backlog): Fix estimation points alignment

--- a/app/styles/modules/backlog/backlog-table.scss
+++ b/app/styles/modules/backlog/backlog-table.scss
@@ -52,7 +52,7 @@
             align-items: center;
             display: flex;
             flex-grow: 0;
-            justify-content: center;
+            justify-content: flex-end;
             margin-left: 20px;
             width: 75px;
 
